# ansible-inventory-git

./: Cargo.toml  README.md
.cargo/: 2config.toml_old  config.toml
.github/workflows/: ci.yml  rust.yml
src/: main.rs  test_main.rs
