#cargo-features = ["strip"]
[package]
name = "ansible-inventory-git"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/satandyh/ansible-inventory-git"
readme = "README.md"
description = """
An Ansible script that get external inventory and outputs to stdout.
"""

[dependencies]
git2 = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "ansible-inventory-git"
